# 5ire-rust-api

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
client-keystore/src/: lib.rs
node-api/src/: metadata.rs
src/examples/: cli.yml  example_contract.rs.DEPRECATED  example_custom_storage_struct.rs.DEPRECATED  example_election.rs  example_event_error_details.rs  example_generic_event_callback.rs  example_generic_extrinsic.rs  example_get_existential_deposit.rs  example_get_storage.rs  example_listen_new_blocks.rs  example_print_metadata.rs  example_read_storage.rs  example_read_storage_at_blockhash.rs  example_simple_connect.rs  example_sudo.rs  example_transfer.rs  example_traverse_events.rs  transfer-cli.yml
src/extrinsic/: balances.rs
src/std/: mod.rs
src/std/rpc/: json_req.rs
src/std/rpc/ws_client/: mod.rs
test-no-std/: Cargo.toml  README.md
test-no-std/src/: main.rs
tutorials/api-client-tutorial/: Cargo.toml
tutorials/api-client-tutorial/src/: main.rs
tutorials/fire-client-tutorial/: Cargo.toml
tutorials/fire-client-tutorial/src/: main.rs
